apps/demo-2/demo-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-2
  namespace: demo-2
  labels:
    app: demo-2
spec:
  selector:
    app: demo-2
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
