apps/demo-2/demo-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-2
  labels:
    app: demo-2
  namespace: demo-2
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - demo-2.k8s.integratn.tech
    secretName: demo-2-tls
  rules:
  - host: demo-2.k8s.integratn.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-2
            port: 
              name: http
